syntax = "proto3";

option go_package = "pb/gen";

package ukama.lookup.v1;

import "validator.proto";
import "google/protobuf/any.proto";

service Events {

    rpc SystemsKeepAlive(SystemKeepAliveRequest) returns (SystemKeepAliveResponse);

}


message SystemKeepAliveRequest {
    string systemName = 1 [(validator.field) = {string_not_empty: true}];
    int64 tsatmp = 2 [(validator.field) = {string_not_empty: true}];
}

message SystemKeepAliveResponse {

}
