syntax = "proto3";
package ukama.subscriber.v1;
option go_package = "pb/gen";

service SubscriberRegistryService {
    rpc Get (GetSubscriberRequest) returns (GetSubscriberResponse) {}
    rpc Add (AddSubscriberRequest) returns (AddSubscriberResponse){}
    rpc Delete (DeleteSubscriberRequest) returns (DeleteSubscriberResponse){}
}

message DeleteSubscriberRequest{
    string subscriberId  = 1;
}

message DeleteSubscriberResponse{
    string subscriberId  = 1;
}

message GetSubscriberRequest{
    string subscriberId  = 1;
}

message GetSubscriberResponse{
    subscriber subscriber  = 1;
}

message AddSubscriberRequest{
    string name  = 1;
    string email  = 2;
    string phone  = 3;
    string address  = 4;
    string proofOfIdentitification = 5;
    string proofSerialNumber = 6;
    string dob = 7; 
}

message AddSubscriberResponse{
    string subscriberId  =1;
}

message subscriber{
    uint64 id =1;
    string name  = 2;
    string subscriberId=3;
    string email  = 4;
    string phone  = 5;
    string address  = 6;
    string proofOfIdentification = 8;
    string proofSerialNumber = 9;
    string dob = 10;  
    string createdAt = 11 ;
    string deletedAt = 12;
    string updatedAt = 13;
}
